# ha-dhd-audio

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
custom_components/dhd_audio/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  ecp.py  entity.py  manifest.json  strings.json  switch.py
custom_components/dhd_audio/translations/: en.json  nl.json
tests/: __init__.py  test_ecp.py
